@@ -17,6 +17,7 @@
 - Adjust configure for OpenBSD
 - Use UUIDs instead of counter for messages
 - Support basic ad-hoc commands(xep-0050) (/command)
+- Add option to trust server's certificate (/connect, /account)
 - Bug fixes: https://github.com/boothj5/profanity/milestone/16?closed=1
 
 0.5.1
